--- a/dark_theme.css
+++ b/dark_theme.css
@@ -248,3 +248,112 @@ button {
   box-shadow: 10px 10px 20px 0px rgba(170, 170, 204, 0.5),
     5px 5px 10px 0px rgba(170, 170, 204, 0.25);
 }
+
+button:hover {
+  animation: buttonAnimation 3s;
+  display: inline-flex;
+  padding: 0.5625rem 1.125rem 0.5625rem 1.1875rem;
+  justify-content: center;
+  align-items: center;
+  border-radius: 2.5rem;
+
+  /* Inner shadow 1 */
+  box-shadow: -1px -1px 2px 0px #fff inset,
+    1px 1px 2px 0px rgba(170, 170, 204, 0.5) inset;
+}
+
+@keyframes buttonAnimation {
+  100% {
+    background: var(--indium-technology-red, #eb3f57);
+    /* background-color: #eb3f57; */
+  }
+  75% {
+    background: var(--indium-technology-red, #eb3f56bb);
+    /* background-color: #eb3f57; */
+  }
+  50% {
+    background: var(--indium-technology-red, #eb3f568c);
+    /* background-color: #eb3f57; */
+  }
+}
+
+.container {
+  display: inline-block;
+  cursor: pointer;
+}
+
+ul {
+  visibility: hidden;
+}
+
+.container:hover + nav ul,
+ul:hover {
+  visibility: visible;
+  animation: navItems 2s linear 3.5s infinite direction fill-mode;
+}
+
+@keyframes navItems {
+  100% {
+    nav ul li:nth-child(n) {
+      visibility: visible;
+    }
+  }
+}
+
+.bar1,
+.bar2,
+.bar3 {
+  width: 35px;
+  height: 5px;
+  background-color: #333;
+  margin: 6px 0;
+  transition: 0.4s;
+}
+
+.loader_wrapper {
+  height: 100%;
+  width: 100%;
+  background-color: #9a2535;
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  animation: fadeout 2s linear 1s forwards;
+}
+
+.loader {
+  height: 10rem;
+  width: 10rem;
+  position: relative;
+  border: 12px solid rgba(255, 250, 240, 0.867);
+  border-radius: 50%;
+  border-color: #eb3f56 #eb3f57 #eb3f57 #fff;
+  animation: spin 2s ease-in infinite;
+}
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes fadeout {
+  to {
+    visibility: hidden;
+    opacity: 0;
+  }
+}
+
+.change .bar1 {
+  transform: translate(0, 11px) rotate(-45deg);
+}
+
+.change .bar2 {
+  opacity: 0;
+}
+
+.change .bar3 {
+  transform: translate(0, -11px) rotate(45deg);
+}
