--- a/dark_theme.css
+++ b/dark_theme.css
@@ -155,7 +155,7 @@ footer ul li {
   padding: 10px;
 }
 
-nav ul li:first-child a {
+nav ul li:nth-child(2) a {
   text-decoration: underline;
 }
 
@@ -282,44 +282,50 @@ button:hover {
   cursor: pointer;
 }
 
-nav ul li {
-  opacity: 0;
+ul.menu li {
+  visibility: hidden;
 }
 
-/* nav ul.menu li a {
-  color: #dd01ff;
-} */
+ul.menu li:hover {
+  visibility: visible;
+}
 
-.container:hover ul.menu li a {
-  opacity: 1;
-  animation: fadeInUp 0.5s linear;
+ul.menu:hover li,
+.container:hover ~ li {
+  /* opacity: 0; */
+  animation: fadeInUp 0.5s linear forwards;
 }
 
 @keyframes fadeInUp {
   to {
-    opacity: 1;
+    visibility: visible;
   }
 }
 
 /* Delay each list item by a staggered amount */
-ul.menu li:nth-child(1) a {
+
+.container:hover ~ li:nth-child(2) {
+  animation-delay: 0.25s;
+}
+
+ul.menu:hover li,
+.container:hover ~ li:nth-child(3) {
   animation-delay: 0.5s;
 }
 
-ul.menu li:nth-child(2) a {
+ul.menu:hover li,
+.container:hover ~ li:nth-child(4) {
   animation-delay: 1s;
 }
 
-ul.menu li:nth-child(3) a {
+ul.menu:hover li,
+.container:hover ~ li:nth-child(5) {
   animation-delay: 1.5s;
 }
 
-ul.menu li:nth-child(4) a {
+ul.menu:hover li,
+.container:hover ~ li:nth-child(6) {
   animation-delay: 2s;
-}
-
-ul.menu li:nth-child(5) a {
-  animation-delay: 2.5s;
 }
 
 .bar1,
